--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mi primera web</title>
+        <title>Nuestra web</title>
         <link rel="stylesheet" href="styles.css" />
         <script src="https://kit.fontawesome.com/c735cba60a.js" crossorigin="anonymous"></script>
         <script src="program.js"></script>
@@ -15,7 +15,7 @@
                 <nav>
                     <ul>
                         <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Acerca de mi</a></li>
+                        <li><a href="#">Acerca de Nosotros</a></li>
                         <li><a href="#">Trabajos</a></li>
                         <li><a href="#">Servicios</a></li>
                         <li><a href="#">Contacto</a></li>
@@ -26,9 +26,9 @@
      <main id="seccion-principal">
         <section class="seccion-1">
             <div class="acerca-de">
-                <h2>Acerca de mí</h2>
-                <p class="parrafo1">¡Bienvenido a mi página! Aquí, aprenderás más sobre mí.</p>
-                <p class="parrafo2">Habla de ti
+                <h2>Acerca de Nosotros</h2>
+                <p class="parrafo1">¡Bienvenido a Nuestra página! Aquí, aprenderás más sobre nosotros.</p>
+                <p class="parrafo2">Hablanos de ti
                 </p>
             </div>
             <div class="acerca-imagen">
