--- a/public_html/index.html
+++ b/public_html/index.html
@@ -28,7 +28,7 @@
             <div class="acerca-de">
                 <h2>Acerca de Nosotros</h2>
                 <p class="parrafo1">¡Bienvenido a Nuestra página! Aquí, aprenderás más sobre nosotros.</p>
-                <p class="parrafo2">Hablanos de ti
+                <p class="parrafo2">Hablanos de ti y de tus conocimientos de programacion
                 </p>
             </div>
             <div class="acerca-imagen">
