--- a/public_html/index.html
+++ b/public_html/index.html
@@ -42,6 +42,9 @@
     <footer>
         <h3>Redes Sociales</h3>
         <nav>
+            <a href="https://api.whatsapp.com/sen?phone=333333333">
+                class="btn-wsp" target="_blank">
+                <i class="icon-whatsapp"></i>
             <ul>
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Instagram</a></li>
