--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="styles.css" />
         <script src="https://kit.fontawesome.com/c735cba60a.js" crossorigin="anonymous"></script>
         <script src="program.js"></script>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
     </head>
     <body>
         <div class="container">
@@ -28,8 +32,9 @@
             <div class="acerca-de">
                 <h2>Acerca de Nosotros</h2>
                 <p class="parrafo1">¡Bienvenido a Nuestra página! Aquí, aprenderás más sobre nosotros.</p>
-                <p class="parrafo2">Hablanos de ti y de tus conocimientos de programacion y de ingeneria, tambien puedes compartir tus proyectos para que podamos crecer en la red.
-                </p>
+                <p class="parrafo2">Hablanos de ti y de tus conocimientos de programacion y de ingeneria, tambien puedes compartir tus proyectos para que podamos crecer en la red.</p>
+                
+            
             </div>
             <div class="acerca-imagen">
                 <img src="https://images.unsplash.com/photo-1668554245790-bfdc72f0bb3d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80" width="200px" alt="imagen personal">
