--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,50 +3,83 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nuestra web</title>
-        <link rel="stylesheet" href="styles.css" />
-        <script src="https://kit.fontawesome.com/c735cba60a.js" crossorigin="anonymous"></script>
-        <script src="program.js"></script>
+        <title>Belleza en Linea</title>
 
+        <link rel="stylesheet" type="text/css" href="styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
     </head>
-    <body>
+    <body style="background-color: #fcffff;">
         <div class="container">
-            <header>
-                <a href="index.html"><i class="fa-solid fa-heart"></i></a>
-                <nav>
-                    <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Acerca de Nosotros</a></li>
-                        <li><a href="#">Trabajos</a></li>
-                        <li><a href="#">Servicios</a></li>
-                        <li><a href="#">Contacto</a></li>
-                        <li><a href="#">Facebook</a></li>
-                    </ul>
-                </nav>
-     </header>
+            <header style="background-color: #4d82bc;">
+                <div style="display: flex;">
+                    <div style="width:30%;">
+                        <h1 style="padding-left: 30px; padding-right: 30px; padding-top: 10px;">Nombre Tienda</h1>
+                    </div>
+                    <div class="btn-group" role="group" aria-label="Basic outlined example" style="width: 55%; position: relative; left: 30px; top: 20px;">
+                        <a href="/public_html/" style="padding-right: 5px;">
+                        <button type="button" class="btn btn-primary btn-lg btn-block">Inicio</button>
+                        </a>
+                        <a href="/public_html/" style="padding-right: 5px;">
+                        <button type="button" class="btn btn-primary btn-lg btn-block">Acerca de Nosotros</button>
+                        </a>
+                        <a href="/public_html/" style="padding-right: 5px;">
+                        <button type="button" class="btn btn-primary btn-lg btn-block">Servicios</button>
+                        </a>
+                        <a href="/public_html/" style="padding-right: 5px;">
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Trabajos</button>
+                        </a>
+                    </div>
+                    <div>
+                        <img src="images/RedesSociales.jpg" style="width: 180px; height: 60px; border-style: solid; border-radius: 20px; border-width: 3px; border-color: black; position: relative; right: 50px;">
+                    </div>
+                </div>            
+            </header>
      <main id="seccion-principal">
-        <section class="seccion-1">
-            <div class="acerca-de">
-                <h2>Acerca de Nosotros</h2>
-                <p class="parrafo1">¡Bienvenido a Nuestra página! Aquí, aprenderás más sobre nosotros.</p>
-                <p class="parrafo2">Hablanos de ti y de tus conocimientos de programacion y de ingeneria, tambien puedes compartir tus proyectos para que podamos crecer en la red.</p>
+        <section class="seccion-1" style="margin-bottom: 30px;">
+            <div class="acerca-de" style="margin-top: 30px;">
+
+                <p style="font-family: Brush Script MT; font-size:80px; position: relative; left: 30px;">Bienvenidos</p>
+                <p style="font-family: Perpetua; font-size: 30px; position: relative; top: -40px; left: 50px;">A una experiencia completa de belleza & bienestar</p>
                 
-            
+                <div class="bodyCont">
+
+                    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel"  style="position: relative; top: -20px;">            
+                        <div class="carousel-inner">
+                          <div class="carousel-item active" data-bs-interval="3000">
+                            <img src="images/imagen1.jpeg" class="d-block w-100" alt="Prod1">
+                          </div>
+                          <div class="carousel-item" data-bs-interval="3000">
+                            <img src="images/image2.jpg" class="d-block w-100" alt="Prod2">
+                          </div>
+                          <div class="carousel-item" data-bs-interval="3000">
+                            <img src="images/imagen3.jpg" class="d-block w-100" alt="Prod3">
+                          </div>
+                          <div class="carousel-item" data-bs-interval="3000">
+                            <img src="images/imagen4.jpeg" class="d-block w-100" alt="Prod4">
+                          </div>
+                          <div class="carousel-item" data-bs-interval="3000">
+                            <img src="images/imagen5.jpg" class="d-block w-100" alt="Prod5">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev" style="background-color: black; width: 100px;">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Anterior</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next" style="background-color: black; width: 100px;">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Siguiente</span>
+                        </button>
+                    </div>
+                </div>
             </div>
-            <div class="acerca-imagen">
-                <img src="https://images.unsplash.com/photo-1668554245790-bfdc72f0bb3d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80" width="200px" alt="imagen personal">
-            </div>
-        </section>    
-        <section class="seccion-2">
-            <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80" width="1000px" alt="imagen de carrusel">
-        </section>
+        </section>  
     </main>
-    <footer>
-        <h3>Redes Sociales</h3>
-        <nav>
+    <br><br>
+    <footer style="background-color: #4d82bc; color: #ffffff;">
+        <h3 style="padding-left: 5px; padding-top: 10px;">Redes Sociales</h3>
+        <nav style="padding: 10px; background-color: #4d82bc;">
             <ul>
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Instagram</a></li>
