--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,7 +15,7 @@
             <header style="background-color: #4d82bc;">
                 <div style="display: flex;">
                     <div style="width:30%;">
-                        <h1 style="padding-left: 30px; padding-right: 30px; padding-top: 10px;">Nombre Tienda</h1>
+                        <h1 style="padding-left: 30px; padding-right: 30px; padding-top: 10px; font-family: Perpetua;">Belleza Diaria</h1>
                     </div>
                     <div class="btn-group" role="group" aria-label="Basic outlined example" style="width: 55%; position: relative; left: 30px; top: 20px;">
                         <a href="/public_html/" style="padding-right: 5px;">
