--- a/public_html/Servicios.html
+++ b/public_html/Servicios.html
@@ -40,40 +40,10 @@
         <section class="seccion-1" style="margin-bottom: 30px;">
             <div class="acerca-de" style="margin-top: 30px;">
 
-                <p style="font-family: Brush Script MT; font-size:80px; position: relative; left: 30px;">Bienvenidos</p>
+                <p style="font-family: Brush Script MT; font-size:80px; position: relative; left: 30px;">Servicios</p>
                 <p style="font-family: Perpetua; font-size: 30px; position: relative; top: -40px; left: 50px;">A una experiencia completa de belleza & bienestar</p>
                 
-                <div class="bodyCont">
 
-                    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel"  style="position: relative; top: -20px;">            
-                        <div class="carousel-inner">
-                          <div class="carousel-item active" data-bs-interval="3000">
-                            <img src="images/imagen1.jpeg" class="d-block w-100" alt="Prod1">
-                          </div>
-                          <div class="carousel-item" data-bs-interval="3000">
-                            <img src="images/image2.jpg" class="d-block w-100" alt="Prod2">
-                          </div>
-                          <div class="carousel-item" data-bs-interval="3000">
-                            <img src="images/imagen3.jpg" class="d-block w-100" alt="Prod3">
-                          </div>
-                          <div class="carousel-item" data-bs-interval="3000">
-                            <img src="images/imagen4.jpeg" class="d-block w-100" alt="Prod4">
-                          </div>
-                          <div class="carousel-item" data-bs-interval="3000">
-                            <img src="images/imagen5.jpg" class="d-block w-100" alt="Prod5">
-                          </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev" style="background-color: black; width: 100px;">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Anterior</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next" style="background-color: black; width: 100px;">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Siguiente</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
         </section>  
     </main>
     <br><br>
