--- a/public_html/Servicios.html
+++ b/public_html/Servicios.html
@@ -12,7 +12,7 @@
     </head>
     <body style="background-color: #fcffff;">
         <div class="container">
-            <header style="background-color: #4d82bc;">
+            <header style="background-color: #690661;">
                 <div style="display: flex;">
                     <div style="width:30%;">
                         <h1 style="padding-left: 30px; padding-right: 30px; padding-top: 10px; font-family: Perpetua;">Belleza Diaria</h1>
