--- a/public_html/Servicios.html
+++ b/public_html/Servicios.html
@@ -47,9 +47,9 @@
         </section>  
     </main>
     <br><br>
-    <footer style="background-color: #4d82bc; color: #ffffff;">
+    <footer style="background-color: #bc4da0; color: #ffffff;">
         <h3 style="padding-left: 5px; padding-top: 10px;">Redes Sociales</h3>
-        <nav style="padding: 10px; background-color: #4d82bc;">
+        <nav style="padding: 10px; background-color: #bc4d97;">
             <ul>
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Instagram</a></li>
