--- a/public_html/Trabajos.html
+++ b/public_html/Trabajos.html
@@ -12,7 +12,7 @@
     </head>
     <body style="background-color: #fcffff;">
         <div class="container">
-            <header style="background-color: #4d82bc;">
+            <header style="background-color: #9e147c;">
                 <div style="display: flex;">
                     <div style="width:30%;">
                         <h1 style="padding-left: 30px; padding-right: 30px; padding-top: 10px; font-family: Perpetua;">Belleza Diaria</h1>
@@ -47,9 +47,9 @@
         </section>  
     </main>
     <br><br>
-    <footer style="background-color: #4d82bc; color: #ffffff;">
+    <footer style="background-color: #bc4db3; color: #ffffff;">
         <h3 style="padding-left: 5px; padding-top: 10px;">Redes Sociales</h3>
-        <nav style="padding: 10px; background-color: #4d82bc;">
+        <nav style="padding: 10px; background-color: #bc4da4;">
             <ul>
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Instagram</a></li>
