--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,9 +10,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
     </head>
-    <body style="background-color: #fcffff;">
+    <body style="background-color: rgb(71, 1, 56)>
         <div class="container">
-            <header style="background-color: #4d82bc;">
+            <header style="background-color: #15023888;">
                 <div style="display: flex;">
                     <div style="width:30%;">
                         <h1 style="padding-left: 30px; padding-right: 30px; padding-top: 10px; font-family: Perpetua;">Belleza Diaria</h1>
