--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,7 +10,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
     </head>
-    <body style="background-color: rgb(71, 1, 56)>
+    <body style="background-color: rgb(71, 1, 56)">
         <div class="container">
             <header style="background-color: #15023888;">
                 <div style="display: flex;">
