--- a/public_html/AboutUs.html
+++ b/public_html/AboutUs.html
@@ -41,7 +41,7 @@
             <div class="acerca-de" style="margin-top: 30px;">
 
                 <p style="font-family: Brush Script MT; font-size:80px; position: relative; left: 30px;">Acerca de Nosotros</p>
-                <p style="font-family: Perpetua; font-size: 30px; position: relative; top: -40px; left: 50px;">A una experiencia completa de belleza & bienestar</p>
+                <p style="font-family: Perpetua; font-size: 30px; position: relative; top: -40px; left: 50px;">Somos una empresa que busca lo mejor para la salud y belleza</p>
                 
 
         </section>  
