--- a/public_html/Trabajos.html
+++ b/public_html/Trabajos.html
@@ -47,13 +47,13 @@
 <div class="row">
     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
       <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
+        src="images/col1.jpg"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Boat on Calm Water"
       />
   
       <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain1.webp"
+        src="images/col2.jpeg"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Wintry Mountain Landscape"
       />
@@ -61,13 +61,13 @@
   
     <div class="col-lg-4 mb-4 mb-lg-0">
       <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain2.webp"
+        src="images/col3.jpg"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Mountains in the Clouds"
       />
   
       <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
+        src="images/col4.jpg"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Boat on Calm Water"
       />
@@ -75,13 +75,13 @@
 
     <div class="col-lg-4 mb-4 mb-lg-0">
       <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(18).webp"
+        src="images/col5.jpeg"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Waves at Sea"
       />
   
       <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain3.webp"
+        src="images/col6.jpg"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Yosemite National Park"
       />
