--- a/public_html/Servicios.html
+++ b/public_html/Servicios.html
@@ -86,8 +86,7 @@ data-mdb-ride="carousel"
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
+                Spa para realjación unica y liberar todo el estres cargado.
               </p>
               <a href="#!" class="btn btn-primary">Button</a>
             </div>
