--- a/public_html/Servicios.html
+++ b/public_html/Servicios.html
@@ -103,8 +103,7 @@ data-mdb-ride="carousel"
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk
-                  of the card's content.
+                  Pestañas pelo a pelo, para una mirada perfecta.
                 </p>
                 <a href="#!" class="btn btn-primary">Button</a>
               </div>
@@ -121,8 +120,7 @@ data-mdb-ride="carousel"
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk
-                  of the card's content.
+                  Cejas unicas y perfectas combinación relevante en tu mirada.
                 </p>
                 <a href="#!" class="btn btn-primary">Button</a>
             </div>
