--- a/public_html/Servicios.html
+++ b/public_html/Servicios.html
@@ -79,7 +79,7 @@ data-mdb-ride="carousel"
         <div class="col-lg-4">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/181.webp"
+              src="images/serv1.jpg"
               class="card-img-top"
               alt="Waterfall"
             />
@@ -88,7 +88,7 @@ data-mdb-ride="carousel"
               <p class="card-text">
                 Spa para realjación unica y liberar todo el estres cargado.
               </p>
-              <a href="#!" class="btn btn-primary">Button</a>
+              <a href="#!" class="btn btn-primary">Agendar</a>
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@ data-mdb-ride="carousel"
         <div class="col-lg-4 d-none d-lg-block">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp"
+              src="images/serv2.jpg"
               class="card-img-top"
               alt="Sunset Over the Sea"
             />
@@ -105,7 +105,7 @@ data-mdb-ride="carousel"
                 <p class="card-text">
                   Pestañas pelo a pelo, para una mirada perfecta.
                 </p>
-                <a href="#!" class="btn btn-primary">Button</a>
+                <a href="#!" class="btn btn-primary">Agendar</a>
               </div>
             </div>
           </div>
@@ -113,7 +113,7 @@ data-mdb-ride="carousel"
           <div class="col-lg-4 d-none d-lg-block">
             <div class="card">
               <img
-                src="https://mdbcdn.b-cdn.net/img/new/standard/nature/183.webp"
+                src="images/serv3.jpg"
                 class="card-img-top"
                 alt="Sunset over the Sea"
               />
@@ -122,137 +122,14 @@ data-mdb-ride="carousel"
                 <p class="card-text">
                   Cejas unicas y perfectas combinación relevante en tu mirada.
                 </p>
-                <a href="#!" class="btn btn-primary">Button</a>
+                <a href="#!" class="btn btn-primary">Agendar</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-  <!-- Single item -->
-  <div class="carousel-item">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-md-12">
-          <div class="card">
-            <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/184.webp"
-              class="card-img-top"
-              alt="Fissure in Sandstone"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
-              </p>
-              <a href="#!" class="btn btn-primary">Button</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 d-none d-lg-block">
-          <div class="card">
-            <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/185.webp"
-              class="card-img-top"
-              alt="Storm Clouds"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
-              </p>
-              <a href="#!" class="btn btn-primary">Button</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 d-none d-lg-block">
-          <div class="card">
-            <img
-            src="https://mdbcdn.b-cdn.net/img/new/standard/nature/186.webp"
-            class="card-img-top"
-            alt="Hot Air Balloons"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the bulk
-              of the card's content.
-            </p>
-            <a href="#!" class="btn btn-primary">Button</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Single item -->
-<div class="carousel-item">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <div class="card">
-          <img
-            src="https://mdbcdn.b-cdn.net/img/new/standard/nature/187.webp"
-            class="card-img-top"
-            alt="Peaks Against the Starry Sky"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
-              </p>
-              <a href="#!" class="btn btn-primary">Button</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
-          <div class="card">
-            <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/188.webp"
-              class="card-img-top"
-              alt="Bridge Over Water"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
-              </p>
-              <a href="#!" class="btn btn-primary">Button</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
-          <div class="card">
-            <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/189.webp"
-              class="card-img-top"
-              alt="Purbeck Heritage Coast"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
-              </p>
-              <a href="#!" class="btn btn-primary">Button</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Inner -->
+ 
 </div>
 <!-- Carousel wrapper -->
 
