--- a/public_html/AboutUs.html
+++ b/public_html/AboutUs.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Belleza en Linea</title>
+        <title>Belleza Perfecta en Linea</title>
 
         <link rel="stylesheet" type="text/css" href="styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -41,7 +41,7 @@
             <div class="acerca-de" style="margin-top: 30px;">
 
                 <p style="font-family: Brush Script MT; font-size:80px; position: relative; left: 30px;">Acerca de Nosotros</p>
-                <p style="font-family: Perpetua; font-size: 30px; position: relative; top: -40px; left: 50px;">Somos una empresa que busca lo mejor para la salud y belleza</p>
+                <p style="font-family: Perpetua; font-size: 30px; position: relative; top: -40px; left: 50px;">Somos una empresa que busca lo mejor para la salud y belleza, donde encontraras una amplia experiencia con mas de 10 años y no tendras excusa de no querer volver</p>
                 
 
         </section>  
