--- a/public_html/AboutUs.html
+++ b/public_html/AboutUs.html
@@ -41,7 +41,8 @@
             <div class="acerca-de" style="margin-top: 30px;">
 
                 <p style="font-family: Brush Script MT; font-size:80px; position: relative; left: 30px;">Acerca de Nosotros</p>
-                <p style="font-family: Perpetua; font-size: 30px; position: relative; top: -40px; left: 50px;">Somos una empresa que busca lo mejor para la salud y belleza, donde encontraras una amplia experiencia con mas de 10 años y no tendras excusa de no querer volver</p>
+                <p style="font-family: Perpetua; font-size: 30px; position: relative; top: -40px; left: 50px;">Somos una empresa que busca lo mejor para la salud y belleza, 
+                    <br>donde encontraras una amplia experiencia con mas de 10 años y no tendras excusa de no querer volver</p>
                 
 
         </section>  
