--- a/public_html/Servicios.html
+++ b/public_html/Servicios.html
@@ -64,7 +64,7 @@ data-mdb-ride="carousel"
               alt="Waterfall"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Spa</h5>
               <p class="card-text">
                 Spa para realjación unica y liberar todo el estres cargado.
               </p>
@@ -81,7 +81,7 @@ data-mdb-ride="carousel"
               alt="Sunset Over the Sea"
             />
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Pestañas</h5>
                 <p class="card-text">
                   Pestañas pelo a pelo, para una mirada perfecta.
                 </p>
@@ -98,7 +98,7 @@ data-mdb-ride="carousel"
                 alt="Sunset over the Sea"
               />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Cejas</h5>
                 <p class="card-text">
                   Cejas unicas y perfectas combinación relevante en tu mirada.
                 </p>
