--- a/public_html/AboutUs.html
+++ b/public_html/AboutUs.html
@@ -42,7 +42,10 @@
 
                 <p style="font-family: Brush Script MT; font-size:80px; position: relative; left: 30px;">Acerca de Nosotros</p>
                 <p style="font-family: Perpetua; font-size: 30px; position: relative; top: -40px; left: 50px;">Somos una empresa que busca lo mejor para la salud y belleza, 
-                    <br>donde encontraras una amplia experiencia con mas de 10 años y no tendras excusa de no querer volver</p>
+                    <br>donde encontraras una amplia experiencia con mas de 10 años y no tendras excusa de no querer volver
+                
+                Encuentranos en Y&H SPA 
+                Redes Sociales</p>
                 
 
         </section>  
