--- a/public_html/AboutUs.html
+++ b/public_html/AboutUs.html
@@ -45,8 +45,9 @@
                     <br>donde encontraras una amplia experiencia con mas de 10 años y no tendras excusa de no querer volver
                 
                 <br>
-                    Encuentranos en Y&H SPA 
-                Redes Sociales</p>
+                    Encuentranos Redes sociuales:
+                    <br> Y&H SPA 
+                </p>
                 
 
         </section>  
